05/m05a07dates-handout/m05a07dates-handout/grading/2023-10-05-13-12-43/compile.err
Date.java:10: error: constructor Date(int,int,int) is already defined in class Date
    public Date(int year, int month, int day) {
           ^
1 error
